--- a/widgets/_app-grid.scss
+++ b/widgets/_app-grid.scss
@@ -18,11 +18,12 @@ $app_icon_size: 96px;
 
 // Icon tiles in the app grid
 .app-well-app {
-  @include overview_icon($osd_fg_color);
+  @include overview_icon($system_fg_color);
 
   .overview-icon {
     padding: $base_padding*2;
     border-radius: $base_border_radius*3;
+    color: $system_fg_color;
   }
   .overview-icon.overview-icon-with-label {
     > StBoxLayout {
@@ -33,7 +34,7 @@ $app_icon_size: 96px;
 
 // app folders
 .app-well-app.app-folder {
-  @include overview_icon($fg_color, $flat: false);
+  @include overview_icon($system_fg_color, $flat: false);
 }
 
 // expanded folder
@@ -46,6 +47,23 @@ $app_icon_size: 96px;
   @if $is_highcontrast {
     box-shadow:inset 0 0 0 2px $hc_inset_color;
   }
+  
+  @if $variant == 'light' {
+    & .app-well-app {
+    @include overview_icon($system_bg_color);
+
+    .overview-icon {
+      padding: $base_padding*2;
+      border-radius: $base_border_radius*3;
+      color: $fg_color;
+    }
+    .overview-icon.overview-icon-with-label {
+      > StBoxLayout {
+        spacing: $base_padding;
+      }
+    }
+  }
+}
 
   & .folder-name-container {
     padding: 24px 36px 0;
@@ -62,8 +80,10 @@ $app_icon_size: 96px;
     }
 
     /* FIXME: this is to keep the label in sync with the entry */
-    & .folder-name-label { padding: 5px 7px; color: $osd_fg_color; }
-
+    & .folder-name-label { padding: 5px 7px; color: $system_fg_color; }
+    @if $variant == 'light' {
+    & .folder-name-label { padding: 5px 7px; color: $fg_color; }
+    }
     & .edit-folder-button {
       @extend %button;
       padding: 0;
@@ -85,8 +105,50 @@ $app_icon_size: 96px;
 
   & .page-indicators {
     margin-bottom: 18px;
+    @if $variant == 'light' {
+    .page-indicator-icon {
+    width: 10px;
+    height: 10px;
+    border-radius: 10px; // the same as height&width
+    background-color: $bubble_buttons_color;
   }
+  }
+  }
+  
+  @if $variant == 'light' {
+    & .page-navigation-arrow {
+  margin: 6px;
+  padding: 18px;
+  width: 24px;
+  height: 24px;
+  border-radius: 99px;
+
+  > StIcon { color: $fg_color;}
+
+  @if $is_highcontrast {
+    @include button(normal, $system_fg_color, transparentize($system_bg_color, 0.5));
+  }
+
+  &:insensitive { @include button(undecorated, $system_fg_color, transparentize($system_bg_color, 0.5));> StIcon { color: $system_fg_color;}}
+  &:hover { @include button(hover, $system_fg_color, transparentize($system_bg_color, 0.5));> StIcon { color: $system_fg_color;}}
+  &:active { @include button(active, $system_fg_color, transparentize($system_bg_color, 0.5));> StIcon { color: $system_fg_color;}}
+    }
+  }
+  
+  @if $variant == 'light' {
+  & .app-well-app-running-dot {
+  height: 5px;
+  width: 5px;
+  border-radius:5px;
+  margin-bottom: 8px;
+  background-color: $fg_color;
 }
+}  
+  
+  
+  
+} //end of afd
+
 
 .app-folder-dialog-container {
   padding: $base_padding*2;
@@ -100,7 +162,7 @@ $app_icon_size: 96px;
   width: 5px;
   border-radius:5px;
   margin-bottom: 8px;
-  background-color: $osd_fg_color;
+  background-color: $system_fg_color;
 }
 
 // Rename popup for app folders
@@ -130,8 +192,8 @@ $app_icon_size: 96px;
 
 // shutdown and other actions in the grid
 .system-action-icon {
-  background-color: rgba(0,0,0,0.8);
-  color: white;
+  background-color: transparentize($system_fg_color,.9);
+  color: $system_fg_color;
   border-radius: 99px;
   icon-size: $app_icon_size * 0.5;
   @if $is_highcontrast {
@@ -167,11 +229,14 @@ $app_icon_size: 96px;
   width: 24px;
   height: 24px;
   border-radius: 99px;
+
+  > StIcon { color: $system_fg_color;}
+
   @if $is_highcontrast {
-    @include button(normal, $osd_fg_color, transparentize($osd_bg_color, 0.5));
+    @include button(normal, $system_fg_color, transparentize($system_bg_color, 0.5));
   }
 
-  &:insensitive { @include button(undecorated, $osd_fg_color, transparentize($osd_bg_color, 0.5));}
-  &:hover { @include button(hover, $osd_fg_color, transparentize($osd_bg_color, 0.5));}
-  &:active { @include button(active, $osd_fg_color, transparentize($osd_bg_color, 0.5));}
+  &:insensitive { @include button(undecorated, $system_fg_color, transparentize($system_bg_color, 0.5));}
+  &:hover { @include button(hover, $system_fg_color, transparentize($system_bg_color, 0.5));}
+  &:active { @include button(active, $system_fg_color, transparentize($system_bg_color, 0.5));}
 }
