--- a/widgets/_calendar.scss
+++ b/widgets/_calendar.scss
@@ -78,7 +78,7 @@
     &:hover {background-color: $hover_bg_color;}
     &:focus {
       background-color: mix($bg_color, $selected_bg_color, 80%);
-      color: $selected_fg_color;
+      color: inherit;
       box-shadow:inset 0 0 0 2px transparentize($selected_bg_color, 0.4);
     }
 
@@ -166,11 +166,11 @@
 
   .events-list {
     spacing: 2 * $base_padding;
+    color: $fg_color;
   }
 
   .events-title {
     @extend %heading;
-    color: $insensitive_fg_color;
     margin-bottom: $base_margin;
   }
 
