--- a/widgets/_login-lock.scss
+++ b/widgets/_login-lock.scss
@@ -1,5 +1,5 @@
 $_gdm_bg: $system_bg_color;
-$_gdm_fg: white;
+$_gdm_fg: $system_fg_color;
 $_gdm_dialog_width: 23em;
 
 // common style for gdm and lockscreen
@@ -19,12 +19,12 @@ $_gdm_dialog_width: 23em;
 
 // buttons
 .login-dialog-button {
-  @extend .button;
 
   &.cancel-button,
   &.switch-user-button,
   &.login-dialog-session-list-button {
     @extend .icon-button;
+    @extend %system_button;
   }
 
   &.cancel-button {
@@ -145,7 +145,9 @@ $_gdm_dialog_width: 23em;
   width: 26em;
 }
 
-.login-dialog-prompt-entry {}
+.login-dialog-prompt-entry {
+  @extend %system_entry;
+}
 
 
 /* Screen Shield */
