--- a/widgets/_misc.scss
+++ b/widgets/_misc.scss
@@ -30,7 +30,7 @@
 .flashspot { background-color: white; }
 
 // Hidden
-.hidden { color: rgba(0,0,0,0);}
+.hidden { color: transparent;}
 
 // Caps-lock warning
 .caps-lock-warning-label {
