--- a/_widgets.scss
+++ b/_widgets.scss
@@ -46,5 +46,6 @@
 @import 'widgets/misc';
 @import 'widgets/keyboard';
 @import 'widgets/looking-glass';
-// Lock / login screen
-@import 'widgets/login-lock';
+// Lock / login screens
+@import 'widgets/login-dialog';
+@import 'widgets/screen-shield';
