--- a/_common.scss
+++ b/_common.scss
@@ -64,9 +64,13 @@ stage {
   border: 1px solid $osd_outer_borders_color;
   border-radius: 999px;
   padding: $base_padding*2;
-  @if $is_highcontrast {
-    border: 2px solid $hc_inset_color;
-  }
+}
+
+// Overview panels
+// for the dash and workspace switcher
+%overview_panel {
+  color: $osd_fg_color;
+  background-color: transparentize($osd_fg_color, 0.9);
 }
 
 // icon tiles
@@ -77,14 +81,19 @@ stage {
   border: 2px solid transparent;
   transition-duration: 200ms;
   text-align: center;
-  @if $is_highcontrast {
-    border-color: $hc_inset_color;
-  }
+}
+
+// dialogs
+%bubble_panel {
+  color: $fg_color;
+  background-color: $bg_color;
+  border-radius: $base_border_radius*1.25 + 1px;
+  border: 1px solid $borders_edge;
 }
 
 // normal button styling
 %button {
-  border-radius: $base_border_radius;
+  border-radius: $base_border_radius - 2px; // 6px
   border-style: solid;
   border-width: 1px;
   font-weight: bold;
@@ -94,7 +103,6 @@ stage {
   &:focus { @include button(focus);}
   &:hover { @include button(hover);}
   &:insensitive { @include button(insensitive);}
-  &:selected,
   &:active { @include button(active);}
   &:checked { @include button(checked);}
 
@@ -103,30 +111,16 @@ stage {
     &:focus { @include button(focus, $flat:true);}
     &:hover { @include button(hover, $flat:true);}
     &:insensitive { @include button(insensitive, $flat:true);}
-    &:selected,
     &:active { @include button(active, $flat:true);}
     &:checked { @include button(checked, $flat:true);}
   }
 }
 
-
-// normal entry style
-%entry {
-  border-radius: $base_border_radius;
-  padding: $base_padding*1.5 $base_padding*1.5;
-  color: $fg_color;
-  selection-background-color: $selected_bg_color;
-  selected-color: $selected_fg_color;
-
-  @include entry(normal);
-  &:hover { @include entry(hover);}
-  &:focus { @include entry(focus);}
-  &:insensitive { @include entry(insensitive);}
-}
-
-
 // buttons in dialogs/notifications
 // lighter in color and have a greater radius
+
+$bubble_button_radius:$base_border_radius*1.25;
+
 %bubble_button {
   padding: $base_padding * 2;
   font-weight: bold !important;
@@ -142,25 +136,25 @@ stage {
   &:checked { @include button(checked, $c:$bubble_buttons_color);}
 
   &:first-child:ltr {
-    border-radius: 0 0 0 $modal_radius;
+    border-radius: 0 0 0 $bubble_button_radius;
   }
 
   &:last-child:ltr {
-    border-radius: 0 0 $modal_radius;
+    border-radius: 0 0 $bubble_button_radius 0;
     margin-right: 0 !important;
   }
 
   &:first-child:rtl {
-    border-radius: 0 0 $modal_radius;
+    border-radius: 0 0 $bubble_button_radius 0;
   }
 
   &:last-child:rtl {
-    border-radius: 0 0 0 $modal_radius;
+    border-radius: 0 0 0 $bubble_button_radius;
     margin-left: 0 !important;
   }
 
   &:first-child:last-child {
-    border-radius: 0 0 $modal_radius $modal_radius;
+    border-radius: 0 0 $bubble_button_radius $bubble_button_radius !important;
     margin-left: 0 !important;
     margin-right: 0 !important;
   }
@@ -176,22 +170,13 @@ stage {
   &:active { @include button(active, $tc:$osd_fg_color, $c:$osd_bg_color);}
   &:outlined,&:checked { @include button(checked, $tc:$osd_fg_color, $c:$osd_bg_color);}
 }
-
-
-// tooltip
-%tooltip {
-  background-color: $osd_bg_color;
-  color: $osd_fg_color;
-  border:1px solid $osd_outer_borders_color;
-  border-radius: 99px;
-  padding: $base_padding $base_padding * 2;
-  text-align: center;
-
-  @if $is_highcontrast {
-    background-color: $osd_bg_color;
-    color: $osd_fg_color;
-    border: 1px solid $hc_inset_color;
-  }
+%dosd_button {
+  @include button(undecorated);
+  &:insensitive { @include dbutton(undecorated, $tc:$osd_fg_color, $c:$osd_bg_color);}
+  &:focus { @include dbutton(focus, $tc:$osd_fg_color, $c:$osd_bg_color);}
+  &:hover { @include dbutton(hover, $tc:$osd_fg_color, $c:$osd_bg_color);}
+  &:active { @include dbutton(active, $tc:$osd_fg_color, $c:$osd_bg_color);}
+  &:outlined,&:checked { @include dbutton(checked, $tc:$osd_fg_color, $c:$osd_bg_color);}
 }
 
 /* General Typography */
