--- a/widgets/_calendar.scss
+++ b/widgets/_calendar.scss
@@ -45,6 +45,7 @@
 
     // month label
     .calendar-month-label {
+      color: lighten($fg_color,5%);
       @extend %heading;
       padding: 8px 0;
     }
@@ -53,12 +54,9 @@
       height: 32px;
       width: 32px;
       margin: 2px;
-      border-radius: $base_border_radius;
+      border-radius: $base_border_radius - 2px;
       &:hover, &:focus {background-color: $hover_bg_color;}
       &:active {background-color: $active_bg_color;}
-      @if $is_highcontrast {
-        border:1px solid $hc_inset_color;
-      }
     }
   }
 
@@ -74,7 +72,7 @@
     transition-duration: 100ms;
     @extend %numeric;
     @extend %smaller;
-
+    
     &:hover {background-color: $hover_bg_color;}
     &:focus {
       background-color: mix($bg_color, $selected_bg_color, 80%);
@@ -95,18 +93,12 @@
       color: $insensitive_fg_color;
       padding-top: $base_padding;
       height: 16px !important; // force heading to be smaller height
-      font-weight: 600;
+      font-weight: bold;
       @extend %smaller;
     }
   }
 
-  .calendar-day {
-    font-weight: 600;
-    @if $is_highcontrast {
-      border:1px solid $hc_inset_color;
-      border-radius: 9px;
-    }
-  }
+  .calendar-day {}
   .calendar-work-day {}
   .calendar-nonwork-day {color: $insensitive_fg_color;}
   .calendar-other-month-day {
@@ -150,7 +142,7 @@
     margin: 6px;
     padding: 0 $base_padding;
     border-radius: 3px;
-    background-color: transparentize($fg_color, 0.9);
+    background-color: darken($bg_color, 2%);
     color: $insensitive_fg_color
   }
 }
