--- a/widgets/_dash.scss
+++ b/widgets/_dash.scss
@@ -30,28 +30,22 @@ $dash_border_radius: $modal_radius + $dash_padding;
 
 // background of the dash behind app icons
 .dash-background {
-  background-color: $dash_background_color;
+  background-color: if($variant == 'light', transparentize($dash_background_color, .8), $dash_background_color);
   border-radius: $dash_border_radius;
   padding: $dash_padding;
   spacing: $base_padding;
   margin-bottom: $dash_padding;
-
-  @if $is_highcontrast {
-    border: 2px solid $hc_inset_color;
-    box-shadow:none;
-  }
 }
 
 // items on the dash
 .dash-item-container {
   > * {margin: 0 2px;}
-  &:ltr{&:first-child {margin-left: 0;}}
-  &:rtl{&:first-child {margin-right: 0;}}
+  &:ltr:first-child {margin-left: 0;}
+  &:rtl:first-child {margin-right: 0;}
 
   // each app item on the dash
   .app-well-app .overview-icon {
     padding: $base_padding;
-    border-radius: $base_border_radius*2;
   }
 
   // show apps button
@@ -59,6 +53,7 @@ $dash_border_radius: $modal_radius + $dash_padding;
 
   .show-apps, .app-well-app {
     padding-bottom: $dash_padding;
+    color: $osd_fg_color;
   }
 }
 
@@ -66,15 +61,16 @@ $dash_border_radius: $modal_radius + $dash_padding;
 .dash-separator {
   width: 1px;
   margin: 0 $base_margin;
-  background-color: $borders_color;
+  background-color: if($variant == 'light', white, $borders_color);
   margin-bottom: $dash_padding;
-  @if $is_highcontrast {
-    width: 2px;
-  }
 }
 
 // OSD Tooltip
 .dash-label {
-  @extend %tooltip;
+  color: $osd_fg_color;
+  background-color: $osd_bg_color;
+  border-radius: 99px;
+  padding: $base_padding $base_padding * 2;
+  text-align: center;
   -y-offset: $base_margin * 2; // distance from the dash edge
 }
