--- a/widgets/_dialogs.scss
+++ b/widgets/_dialogs.scss
@@ -5,9 +5,7 @@
 }
 
 .modal-dialog {
-  background-color: $bg_color;
-  border-radius: $modal_radius;
-  box-shadow: inset 0 0 0 1px $outer_borders_color;
+  @extend %bubble_panel;
 
   .modal-dialog-content-box {
     margin: 32px 40px;
