--- a/widgets/_message-list.scss
+++ b/widgets/_message-list.scss
@@ -143,11 +143,6 @@
   border-radius: $base_border_radius;
   color: $fg_color;
 
-  @if $is_highcontrast {
-    border: 1px solid $hc_inset_color;
-    margin: $base_padding*2 2px;
-  }
-
   // colors are lightened since the media controls are in a card
   &:hover {
     background-color: lighten($hover_bg_color, 5%);
@@ -159,12 +154,7 @@
     color: $fg_color;
   }
 
-  &:insensitive {
-    color: lighten($insensitive_fg_color, 5%);
-     @if $is_highcontrast {
-      border-color: transparent;
-    }
-  }
+  &:insensitive { color: lighten($insensitive_fg_color, 5%); }
   
   // fix margin for last button
   &:last-child:ltr { margin-right: $base_margin*3; }
