--- a/widgets/_panel.scss
+++ b/widgets/_panel.scss
@@ -1,8 +1,8 @@
 /* Top Bar */
 // a.k.a. the panel
 
-$panel_bg_color: #000;
-$panel_fg_color: if($variant == 'light', lighten($bg_color, 10%), darken($fg_color, 5%));
+$panel_bg_color: if($variant == 'light', $light_3, $dark_5);
+$panel_fg_color: if($variant == 'light', $_dark_base_color, darken($fg_color, 5%));
 $panel_height: 2.2em;
 $panel_transition_duration: 250ms; // same as the overview transition duration
 
@@ -18,11 +18,14 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
   &.login-screen,
   &:overview {
     background-color: transparent;
+    .panel-button {
+      color: darken(white, 5%) !important;
+    }
   }
 
   // panel menus
   .panel-button {
-    font-weight: bold;
+    font-weight: normal;
     color: $panel_fg_color;
     -natural-hpadding: $base_padding * 2;
     -minimum-hpadding: $base_padding;
@@ -41,7 +44,6 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
     &.screen-recording-indicator {
       box-shadow: inset 0 0 0 100px $screenshot_ui_button_red;
     }
-
     &.screen-sharing-indicator {
       box-shadow: inset 0 0 0 100px $warning_color;
       StBoxLayout { margin: 0 $base_padding; }
@@ -95,7 +97,7 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
         box-shadow: inset 0 0 0 100px transparentize($warning_color, 0.1);
       }
     }
-
+    
     &:active:hover, &:overview:hover, &:focus:hover, &:checked:hover {
       box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.75);
       &.clock-display {
@@ -175,7 +177,7 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
           box-shadow: inset 0 0 0 100px transparentize($warning_color, 0.1);
         }
       }
-
+      
       &:active:hover, &:overview:hover, &:focus:hover, &:checked:hover {
         box-shadow: inset 0 0 0 100px rgba(255,255,255, 0.2);
         &.clock-display {
