--- a/widgets/_search-results.scss
+++ b/widgets/_search-results.scss
@@ -15,7 +15,7 @@
   spacing: $base_padding*3;
 
   // separator (unstyled)
-  .search-section-separator {
+  .search-section-separator { 
     height: $base_margin*2; // use it as a spacer
     background-color: transparent;
   }
@@ -25,7 +25,7 @@
 .search-section-content {
   background-color: lighten($system_bg_color, 5%);
   border-radius: $modal_radius*1.5;
-  box-shadow:inset 0 0 0 1px solid $outer_borders_color;
+  border: 1px solid $osd_outer_borders_color;
   color: $osd_fg_color;
   padding: $base_padding*2;
   margin:0 $base_margin*3;
@@ -36,9 +36,17 @@
   border-radius: $base_border_radius+3px;
 }
 
+@if $variant == 'light' {
+  %search_section_content_item {
+  @include tile_button(transparentize(black, .05));
+  color: $fg_color;
+  border-radius: $base_border_radius+3px;
+  }
+}
 // "no results" text
 .search-statustext {
   @extend %title_1;
+  color: white;
 }
 
 .grid-search-results {
@@ -64,7 +72,7 @@
     // provider labels
     .list-search-provider-details {
       width: 120px;
-      color: $osd_fg_color;
+      color: if( $variant=='light', $fg_color, $osd_fg_color);
     }
   }
 }
@@ -91,6 +99,6 @@
 
   // list item description
   .list-search-result-description {
-    color: $osd_insensitive_fg_color;
+    color: if( $variant=='light', $insensitive_fg_color ,$osd_insensitive_fg_color);
   }
 }
