--- a/widgets/_panel.scss
+++ b/widgets/_panel.scss
@@ -1,8 +1,8 @@
 /* Top Bar */
 // a.k.a. the panel
 
-$panel_bg_color: if($variant == 'light', $light_3, $dark_5);
-$panel_fg_color: if($variant == 'light', $_dark_base_color, darken($fg_color, 5%));
+$panel_bg_color: #000;
+$panel_fg_color: if($variant == 'light', lighten($bg_color, 10%), darken($fg_color, 5%));
 $panel_height: 2.2em;
 $panel_transition_duration: 250ms; // same as the overview transition duration
 
@@ -18,9 +18,6 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
   &.login-screen,
   &:overview {
     background-color: transparent;
-    .panel-button {
-      color: darken(white, 5%) !important;
-    }
   }
 
   // panel menus
