--- a/widgets/_quick-settings.scss
+++ b/widgets/_quick-settings.scss
@@ -110,16 +110,17 @@
     & .icon {
       icon-size: $base_icon_size*1.5; // a non-standard symbolic size but ok
       border-radius: 999px;
+      border: 1px solid $borders_color;
       padding: 1.5 * $base_padding;
       background-color: transparentize($fg_color, 0.8);
       @if $variant == 'light' {
-      	background-color: white;
-      	border: 1px solid $borders_color;
+      	background-color: white;      	
       	}
 
       &.active {
         background-color: $selected_bg_color;
         color: $selected_fg_color;
+        border-color: $selected_bg_color;
       }
     }
 
