--- a/_colors.scss
+++ b/_colors.scss
@@ -9,7 +9,7 @@ $_dark_base_color: darken(desaturate(#241f31, 100%), 2%);
 
 $base_color: if($variant == 'light', #fff, $_dark_base_color);
 $bg_color: if($variant == 'light', #f6f5f4, lighten($base_color, 5%));
-$fg_color: if($variant == 'light', transparentize(black, .2), white);
+$fg_color: if($variant == 'light', $_dark_base_color, white);
 
 $selected_fg_color: #fff;
 $selected_bg_color: #3584e4;
