--- a/widgets/_dialogs.scss
+++ b/widgets/_dialogs.scss
@@ -131,6 +131,8 @@
   margin-bottom: 6px;
 
   .polkit-dialog-user-root-label { color: $warning_color; }
+  
+  .user-icon { color: $fg_color; }
 }
 
 /* Audio selection dialog */
