--- a/widgets/_popovers.scss
+++ b/widgets/_popovers.scss
@@ -76,7 +76,8 @@ $submenu_bg_color: lighten($menu_bg_color, 7%);
   }
 
   .popup-menu-ornament {
-    min-width: $base_icon_size !important;
+    icon-size: $base_icon_size !important;
+    width: $base_icon_size;
   }
 
   // submenu specific styles
@@ -103,12 +104,8 @@ $submenu_bg_color: lighten($menu_bg_color, 7%);
 
 // container for radio and check boxes
 .popup-menu-ornament {
-  @extend %heading;
-  width: 1.2em;
-  text-align: center !important;
-
-  &:ltr { text-align: right;}
-  &:rtl { text-align: left;}
+  icon-size: $base_icon_size !important;
+  width: $base_icon_size;
 }
 
 // separator
