--- a/widgets/_slider.scss
+++ b/widgets/_slider.scss
@@ -5,7 +5,7 @@ $slider_size: 16px;
 .slider {
   // slider trough
   -barlevel-height: 4px;
-  -barlevel-background-color: if($variant == 'light', transparentize($fg_color, 0.6), transparentize($fg_color, 0.8)); //background of the trough
+  -barlevel-background-color: transparentize($fg_color, 0.8); //background of the trough
   -barlevel-border-width: 2px; 
   -barlevel-border-color: transparent; // trough border color
   // fill style
@@ -17,6 +17,8 @@ $slider_size: 16px;
   -barlevel-overdrive-separator-width:1px;
   // slider handler
   -slider-handle-radius: $slider_size * 0.5; // half the size of the size
-  -slider-handle-border-width: 0;
-  -slider-handle-border-color: transparent; // because 0 width
+  -slider-handle-border-width: 1px;
+  -slider-handle-border-color: $borders_color; //transparent; // because 0 width
+  color: white;
+  height: $slider_size +1.5px;
 }
