--- a/widgets/_dialogs.scss
+++ b/widgets/_dialogs.scss
@@ -5,7 +5,9 @@
 }
 
 .modal-dialog {
-  @extend %bubble_panel;
+  background-color: $bg_color;
+  border-radius: $modal_radius;
+  box-shadow: inset 0 0 0 1px $outer_borders_color;
 
   .modal-dialog-content-box {
     margin: 32px 40px;
@@ -131,8 +133,6 @@
   margin-bottom: 6px;
 
   .polkit-dialog-user-root-label { color: $warning_color; }
-  
-  .user-icon { color: $fg_color; }
 }
 
 /* Audio selection dialog */
