--- a/_drawing.scss
+++ b/_drawing.scss
@@ -204,8 +204,8 @@
       box-shadow: inset 0 0 0 1px lighten($button_inset_color, 9%);
       background-color: mix(lighten($button_bg_color, 9%), $button_inset_color, 10%);
     }
-    &:hover { background-color: if($variant == 'light', darken($button_bg_color, 12%), lighten($button_bg_color, 12%));}
-    &:active { background-color: if($variant == 'light', darken($button_bg_color, 15%), lighten($button_bg_color, 15%));}
+    &:hover { background-color: lighten($button_bg_color, 12%);}
+    &:active { background-color: lighten($button_bg_color, 15%);}
   }
 
   // insensitive button
@@ -343,9 +343,6 @@
   spacing: $base_padding;
   transition-duration: 100ms;
   padding: $base_padding*1.5 $base_padding*2;
-
-  &:ltr {padding-left: $base_padding;}
-  &:rtl {padding-right: $base_padding;}
 
   @if $flat {
     @include button(undecorated);
