--- a/widgets/_app-grid.scss
+++ b/widgets/_app-grid.scss
@@ -47,23 +47,6 @@ $app_icon_size: 96px;
   @if $is_highcontrast {
     box-shadow:inset 0 0 0 2px $hc_inset_color;
   }
-  
-  @if $variant == 'light' {
-    & .app-well-app {
-    @include overview_icon($system_bg_color);
-
-    .overview-icon {
-      padding: $base_padding*2;
-      border-radius: $base_border_radius*3;
-      color: $fg_color;
-    }
-    .overview-icon.overview-icon-with-label {
-      > StBoxLayout {
-        spacing: $base_padding;
-      }
-    }
-  }
-}
 
   & .folder-name-container {
     padding: 24px 36px 0;
@@ -76,21 +59,18 @@ $app_icon_size: 96px;
 
     & .folder-name-entry {
       width: 12em;
-      border-radius: $base_border_radius*2;
     }
 
     /* FIXME: this is to keep the label in sync with the entry */
     & .folder-name-label { padding: 5px 7px; color: $system_fg_color; }
-    @if $variant == 'light' {
-    & .folder-name-label { padding: 5px 7px; color: $fg_color; }
-    }
+
     & .edit-folder-button {
       @extend %button;
       padding: 0;
       width: 36px;
       height: 36px;
       border-radius: 99px;
-      & > StIcon { icon-size: $base_icon_size }
+      & > StIcon { icon-size: $base_icon_size; }
     }
   }
 
@@ -105,50 +85,64 @@ $app_icon_size: 96px;
 
   & .page-indicators {
     margin-bottom: 18px;
-    @if $variant == 'light' {
-    .page-indicator-icon {
-    width: 10px;
-    height: 10px;
-    border-radius: 10px; // the same as height&width
-    background-color: $bubble_buttons_color;
-  }
-  }
   }
   
   @if $variant == 'light' {
-    & .page-navigation-arrow {
-  margin: 6px;
-  padding: 18px;
-  width: 24px;
-  height: 24px;
-  border-radius: 99px;
-
-  > StIcon { color: $fg_color;}
-
-  @if $is_highcontrast {
-    @include button(normal, $system_fg_color, transparentize($system_bg_color, 0.5));
-  }
-
-  &:insensitive { @include button(undecorated, $system_fg_color, transparentize($system_bg_color, 0.5));> StIcon { color: $system_fg_color;}}
-  &:hover { @include button(hover, $system_fg_color, transparentize($system_bg_color, 0.5));> StIcon { color: $system_fg_color;}}
-  &:active { @include button(active, $system_fg_color, transparentize($system_bg_color, 0.5));> StIcon { color: $system_fg_color;}}
-    }
-  }
   
-  @if $variant == 'light' {
-  & .app-well-app-running-dot {
-  height: 5px;
-  width: 5px;
-  border-radius:5px;
-  margin-bottom: 8px;
-  background-color: $fg_color;
+  	& .app-well-app {
+	  @include overview_icon($system_bg_color);
+
+ 	 .overview-icon {
+	    padding: $base_padding*2;
+	    border-radius: $base_border_radius*3;
+	    color: $fg_color;
+	  }
+	  .overview-icon.overview-icon-with-label {
+	    > StBoxLayout {
+	      spacing: $base_padding;
+	    }
+	  }
+	}
+
+ 	 & .folder-name-container {
+ 	   & .folder-name-entry { @extend %lentry; }
+ 	   & .folder-name-label { padding: 5px 7px; color: $fg_color; } 	   
+ 	   }
+  
+	  & .page-indicators {
+	    .page-indicator-icon {
+	    width: 10px;
+	    height: 10px;
+ 	   border-radius: 10px; // the same as height&width
+ 	   background-color: mix($fg_color, $bg_color, $button_mix_factor);
+ 	 }
+  	}
+  	
+  	& .page-navigation-arrow {
+  	margin: 6px;
+  	padding: 18px;
+  	width: 24px;
+ 	 height: 24px;
+  	border-radius: 99px;
+
+ 	 > StIcon { color: $fg_color;}
+
+ 	 @if $is_highcontrast {
+ 	   @include button(normal, $system_fg_color, transparentize($system_bg_color, 0.5));
+ 	 }
+
+  	&:insensitive { @include button(undecorated, $system_fg_color, transparentize($system_bg_color, 0.5));> StIcon 	{ color: $system_fg_color;}}
+  	&:hover { @include button(hover, $system_fg_color, transparentize($system_bg_color, 0.5));> StIcon { color: $system_fg_color;}}
+  	&:active { @include button(active, $system_fg_color, transparentize($system_bg_color, 0.5));> StIcon { color: $system_fg_color;}}
+  	  }
+  	
+  	& .app-well-app-running-dot {
+	  background-color: $fg_color;
+	}
+  	  
 }
-}  
   
-  
-  
-} //end of afd
-
+}
 
 .app-folder-dialog-container {
   padding: $base_padding*2;
@@ -183,6 +177,7 @@ $app_icon_size: 96px;
     height: 10px;
     border-radius: 10px; // the same as height&width
     background-color: white;
+    transition-duration: 400ms;
   }
 }
 
@@ -229,6 +224,7 @@ $app_icon_size: 96px;
   width: 24px;
   height: 24px;
   border-radius: 99px;
+  transition-duration: 100ms;
 
   > StIcon { color: $system_fg_color;}
 
@@ -239,9 +235,10 @@ $app_icon_size: 96px;
   &:insensitive { @include button(undecorated, $system_fg_color, transparentize($system_bg_color, 0.5));}
   &:hover { @include button(hover, $system_fg_color, transparentize($system_bg_color, 0.5));}
   &:active { @include button(active, $system_fg_color, transparentize($system_bg_color, 0.5));}
+  
   @if $variant == 'light' {
-    &:insensitive { @include button(undecorated, $system_fg_color, transparentize($system_fg_color, 0.9));}
-    &:hover { @include button(hover, $system_fg_color, transparentize($system_fg_color, 0.9));}
-    &:active { @include button(active, $system_fg_color, transparentize($system_fg_color, 0.9));}
+  &:insensitive { @include button(undecorated, $system_fg_color, transparentize($system_fg_color, 0.9));}
+  &:hover { @include button(hover, $system_fg_color, transparentize($system_fg_color, 0.9));}
+  &:active { @include button(active, $system_fg_color, transparentize($system_fg_color, 0.9));}
   }
 }
