--- a/widgets/_login-lock.scss
+++ b/widgets/_login-lock.scss
@@ -25,6 +25,7 @@ $_gdm_dialog_width: 23em;
   &.login-dialog-session-list-button {
     @extend .icon-button;
     @extend %system_button;
+    @if $variant == 'light' {background-color: transparentize($_gdm_fg, .9); &:hover, &:active { background-color: transparentize($_gdm_fg, .8); }}
   }
 
   &.cancel-button {
@@ -258,6 +259,7 @@ $_gdm_dialog_width: 23em;
         width: $base_icon_size*3;
         height:  $base_icon_size*3;
         background-color: transparentize($_gdm_fg, 0.9);
+        @if $variant == 'light' { color: $_gdm_fg; }
       }
     }
   }
@@ -279,6 +281,7 @@ $_gdm_dialog_width: 23em;
         padding: 32px;
         icon-size: $base_icon_size*4;
         background-color: transparentize($_gdm_fg, 0.9);
+        @if $variant == 'light' { color: $_gdm_fg; }
       }
     }
   }
