--- a/_drawing.scss
+++ b/_drawing.scss
@@ -23,22 +23,23 @@
   @else { box-shadow: $shadow1; }
 }
 
+// entries
 
-// Text entries
-@mixin entry($t, $c) {
+@mixin entry($t, $fc:$selected_bg_color) {
 //
 // Entries drawing function
 //
 // $t: entry type
-// $c: text color, used to derive background color of entries
+// $fc: focus color
 //
-// possible $t values: normal, focus, insensitive
+// possible $t values:
+// normal, focus, insensitive
 //
   transition-duration: 100ms;
 
   @if $t==normal {
-    background-color: transparentize($c, 0.85);
-    color: transparentize($c,0.3);
+    background-color: transparentize($fg_color, 0.9);
+    color: transparentize($fg_color,0.3);
 
     @if $is_highcontrast {
       box-shadow: inset 0 0 0 1px $hc_inset_color;
@@ -46,19 +47,20 @@
   }
 
   @if $t==focus {
-    background-color: mix(transparentize($c, 0.75), $selected_bg_color, 95%);
-    box-shadow: inset 0 0 0 2px transparentize($selected_bg_color, 0.3);
-    color: $c;
+    background-color: mix(transparentize($fg_color, 0.8), $selected_bg_color, 95%);
+    box-shadow: inset 0 0 0 2px $fc;
+    color: $fg_color;
     &:hover {}
   }
 
   @if $t==hover {
-    background-color: transparentize($c, 0.75);
+    background-color:transparentize($fg_color, 0.8);
+    color: inherit;
   }
 
   @if $t==insensitive {
-    background-color:transparentize($c, 0.75);
-    color: transparentize($c, 0.5);
+    background-color:transparentize($insensitive_fg_color, 0.8);
+    color: $insensitive_fg_color;
   }
 }
 
@@ -160,6 +162,29 @@
     }
   }
 
+  // hover button
+  @else if $t==hover {
+    color: $tc;
+    background-color: lighten($button_bg_color, 3%);
+    @if $is_highcontrast {
+      box-shadow: inset 0 0 0 1px $hc_inset_color !important;
+    }
+  }
+
+  // active button
+  @else if $t==active {
+    color: $tc;
+    background-color:  lighten($button_bg_color, 9%);
+  }
+
+  // checked button
+  @else if $t==checked {
+    color: $tc;
+    background-color: lighten($button_bg_color, 9%);
+    &:hover { background-color: lighten($button_bg_color, 12%);}
+    &:active { background-color: lighten($button_bg_color, 15%);}
+  }
+
   // focused button
   @if $t==focus {
     color: $tc;
@@ -173,39 +198,6 @@
       background-color: mix(lighten($button_bg_color, 6%), $selected_bg_color, 90%);
       box-shadow: inset 0 0 0 2px transparentize($selected_bg_color, 0.3) !important;
     }
-  }
-
-  // hover button
-  @else if $t==hover {
-    color: $tc;
-    background-color: if($variant == 'light', darken($button_bg_color, 3%), lighten($button_bg_color, 3%));
-
-    @if $is_highcontrast == "true" {
-      box-shadow: inset 0 0 0 1px lighten($button_inset_color, 3%);
-      background-color: mix(lighten($button_bg_color, 3%), $button_inset_color, 10%);
-    }
-  }
-
-  // active button
-  @else if $t==active {
-    color: $tc;
-    background-color: if($variant == 'light', darken($button_bg_color, 6%), lighten($button_bg_color, 6%));
-    @if $is_highcontrast == "true" {
-      box-shadow: inset 0 0 0 1px lighten($button_inset_color, 6%);
-      background-color: mix(lighten($button_bg_color, 6%), $button_inset_color, 10%);
-    }
-  }
-
-  // checked button
-  @else if $t==checked {
-    color: $tc;
-    background-color: if($variant == 'light', darken($button_bg_color, 9%), lighten($button_bg_color, 9%));
-    @if $is_highcontrast == "true" {
-      box-shadow: inset 0 0 0 1px lighten($button_inset_color, 9%);
-      background-color: mix(lighten($button_bg_color, 9%), $button_inset_color, 10%);
-    }
-    &:hover { background-color: lighten($button_bg_color, 12%);}
-    &:active { background-color: lighten($button_bg_color, 15%);}
   }
 
   // insensitive button
@@ -282,15 +274,17 @@
 // overview icon, dash, app grid
 @mixin overview_icon($color, $flat: true) {
   transition-duration: 400ms;
-  .overview-icon {
+  .overview-icon { 
     @extend %tile;
   }
   @if $flat {
     .overview-icon { background-color: transparent;}
   } @else {
-    .overview-icon { background-color: transparentize($color, .93); }
+    .overview-icon { 
+      background-color: transparentize($color, .93);
+    }
   }
-  &:hover .overview-icon { background-color: transparentize($color, .87);}
+  &:hover .overview-icon { background-color: transparentize($color, .9);}
 
   &:selected .overview-icon,
   &:focus .overview-icon {
@@ -325,12 +319,6 @@
   &:hover {@include button(hover);}
   &:active {@include button(active);}
   &:focus {@include button(focus);}
-  &:insensitive {
-    @include button(insensitive);
-    @if $flat {
-     background-color: transparent;
-    }
-  }
 }
 
 // styling for all menuitems in popovers
@@ -343,6 +331,9 @@
   spacing: $base_padding;
   transition-duration: 100ms;
   padding: $base_padding*1.5 $base_padding*2;
+
+  &:ltr {padding-left: $base_padding;}
+  &:rtl {padding-right: $base_padding;}
 
   @if $flat {
     @include button(undecorated);
