--- a/widgets/_dash.scss
+++ b/widgets/_dash.scss
@@ -1,8 +1,6 @@
 /* Dash */
 
-// uses system colors
-$dash_background_color: if($variant == 'light', transparentize($bg_color, .93), $system_overlay_bg_color);
-
+$dash_background_color: lighten($system_bg_color, 5%);
 $dash_placeholder_size: 32px;
 $dash_padding: $base_padding*2; // 12px
 $dash_border_radius: $modal_radius + $dash_padding;
@@ -57,11 +55,10 @@ $dash_border_radius: $modal_radius + $dash_padding;
   }
 
   // show apps button
-  .show-apps { @include overview_icon($system_fg_color);}
+  .show-apps { @include overview_icon($osd_fg_color);}
 
   .show-apps, .app-well-app {
     padding-bottom: $dash_padding;
-    color: $system_fg_color;
   }
 }
 
@@ -69,7 +66,7 @@ $dash_border_radius: $modal_radius + $dash_padding;
 .dash-separator {
   width: 1px;
   margin: 0 $base_margin;
-  background-color: $system_borders_color;
+  background-color: $borders_color;
   margin-bottom: $dash_padding;
   @if $is_highcontrast {
     width: 2px;
