--- a/widgets/_quick-settings.scss
+++ b/widgets/_quick-settings.scss
@@ -48,9 +48,7 @@
     max-width: auto;
 
     &:ltr { border-radius: 99px 0 0 99px; }
-    &:ltr > StBoxLayout { padding-right: $base_padding*1.5; }
     &:rtl { border-radius: 0 99px 99px 0; }
-    &:rtr > StBoxLayout { padding-left: $base_padding*1.5; }
 
     &:ltr:last-child { border-radius: 99px; }
     &:rtl:last-child { border-radius: 99px; }
@@ -91,11 +89,6 @@
 
 .quick-toggle-menu {
   @include card;
-
-  // override some card styles
-  background-color: $bg_color !important;
-  color: $fg_color !important;
-
   border-radius: $base_border_radius*3;
   padding: $base_padding*2;
   margin: $base_padding*2 $base_padding*3 0;
@@ -111,12 +104,9 @@
       icon-size: $base_icon_size*1.5; // a non-standard symbolic size but ok
       border-radius: 999px;
       padding: 1.5 * $base_padding;
-      background-color: if($variant == 'light', white, transparentize($fg_color, 0.8));
+      background-color: transparentize($fg_color, 0.8);
 
-      &.active {
-        background-color: $selected_bg_color;
-        color: $selected_fg_color;
-      }
+      &.active { background-color: $selected_bg_color;}
     }
 
     & .title {
@@ -154,7 +144,7 @@
   .popup-menu-icon { -st-icon-style: symbolic; }
 }
 
-.bt-menu-placeholder.popup-menu-item {
+.bt-menu-placeholder {
   @extend %title_4;
   text-align: center;
 
@@ -181,9 +171,6 @@
   }
   & .close-button {
     @extend .icon-button;
-    padding: $base_padding;
-  }
-  & .spinner {
     padding: $base_padding;
   }
 
