--- a/widgets/_app-grid.scss
+++ b/widgets/_app-grid.scss
@@ -110,6 +110,7 @@ $app_icon_size: 96px;
  	   }
   
 	  & .page-indicators {
+		  margin-bottom: 18px;
 	    .page-indicator-icon {
 	    width: 10px;
 	    height: 10px;
