--- a/widgets/_app-grid.scss
+++ b/widgets/_app-grid.scss
@@ -110,10 +110,8 @@ $app_icon_size: 96px;
  	   }
   
 	  & .page-indicators {
+	     margin-bottom: 18px;
 	    .page-indicator-icon {
-	    width: 10px;
-	    height: 10px;
- 	   border-radius: 10px; // the same as height&width
  	   background-color: mix($fg_color, $bg_color, $button_mix_factor);
  	 }
   	}
