--- a/widgets/_notifications.scss
+++ b/widgets/_notifications.scss
@@ -6,6 +6,8 @@ $notification_banner_radius: $base_border_radius*1.5;
 
 // Banner notifications
 .notification-banner {
+  @include card;
+  background-color: $bg_color !important;
   min-height: $notification_banner_height;
   width: $notification_banner_width;
   box-shadow: 0 2px 4px 2px $shadow_color;
