--- a/widgets/_quick-settings.scss
+++ b/widgets/_quick-settings.scss
@@ -39,7 +39,7 @@
   &:rtl > StBoxLayout { padding-left: 0; }
 
   & .quick-toggle-arrow {
-    background-color: transparentize($fg_color, 0.9);
+    background-color: if($variant == 'light', transparentize($fg_color, 0.75), transparentize($fg_color, 0.9));
     padding: $base_padding $base_padding*1.75;
 
     &:ltr { border-radius: 0 99px 99px 0; }
