--- a/widgets/_search-results.scss
+++ b/widgets/_search-results.scss
@@ -23,9 +23,9 @@
 
 // content
 .search-section-content {
-  background-color: lighten($system_bg_color, 5%);
+  background-color: if($variant == 'light', transparentize(lighten($system_bg_color, 5%), .87), $system_bg_color);
   border-radius: $modal_radius*1.5;
-  border: 1px solid $osd_outer_borders_color;
+  border: if($variant == 'light', 1px solid transparentize($borders_edge, .61), 1px solid $osd_outer_borders_color);
   color: $osd_fg_color;
   padding: $base_padding*2;
   margin:0 $base_margin*3;
@@ -36,13 +36,6 @@
   border-radius: $base_border_radius+3px;
 }
 
-@if $variant == 'light' {
-  %search_section_content_item {
-  @include tile_button(transparentize(black, .05));
-  color: $fg_color;
-  border-radius: $base_border_radius+3px;
-  }
-}
 // "no results" text
 .search-statustext {
   @extend %title_1;
@@ -72,7 +65,7 @@
     // provider labels
     .list-search-provider-details {
       width: 120px;
-      color: if( $variant=='light', $fg_color, $osd_fg_color);
+      color: $osd_fg_color;
     }
   }
 }
@@ -99,6 +92,6 @@
 
   // list item description
   .list-search-result-description {
-    color: if( $variant=='light', $insensitive_fg_color ,$osd_insensitive_fg_color);
+    color: $osd_insensitive_fg_color;
   }
 }
